# kaeri_teleop

./: .rosinstall  .rosinstall.bak  README.md  vr_baxter\calibrate\joint_end_states_cal.txt
basic_gui/: CMakeLists.txt  package.xml
basic_gui/src/: BasicBaxterControl.sh  ShutOffUltrasonicSensors.py  TestLaunch.py  gui_basic_baxter_control.py  gui_basic_baxter_control.py~  mirror_left.py
baxter_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  readme_YP  setup.py  setup.py~
baxter_controller/script/: baxter_controller_3Drecon~  baxter_controller_sim  baxter_controller_teleop  baxter_controller_teleop~  baxter_controller~  ik_solver.py~
baxter_controller/src/ik_solver/: ik_solver.py  ik_solver.py~
baxter_custom_urdf/: CMakeLists.txt  CMakeLists.txt~  package.xml  readme_YP
baxter_custom_urdf/launch/: baxter_custom_urdf.launch~  custom_end_effector.launch~  custom_gripper.launch~  foam_cutter.launch  pen.launch  pen.launch~  xtion (copy).launch
baxter_custom_urdf/meshes/: STL_converter.py  STL_converter.py~  foam_cutter.STL  pen.STL  xtion.STL
baxter_custom_urdf/urdf/: custom_end_effector.urdf.xacro~  custom_end_effector.xacro~  extion.xacro~  foam_cutter.urdf.xacro  foam_cutter.urdf.xacro~  foam_cutter.xacro  foam_cutter.xacro~  pen.urdf.xacro  pen.urdf.xacro~  pen.xacro  pen.xacro~  xtion.urdf.xacro  xtion.urdf.xacro~  xtion.xacro  xtion.xacro~
baxter_simulator/baxter_gazebo/: CMakeLists.txt
calibrate_kinnect/: CMakeLists.txt  Kinect_calibration_Instructions_updated  OldVersioncam_calibration.txt  package.xml
calibrate_kinnect/launch/: calibrate.launch  calibrate.launch~  calibrate_transform.launch
calibrate_kinnect/src/: calibrator.py  cam_calibration_transform.py  cam_calibration_xtion.py  cameracalibrator.py  create_txt_file.py  create_txt_file.py~  readme  (+3 more)
collect_data/: CMakeLists.txt  package.xml
input_manager/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  readme_YP  setup.py  setup.py~
input_manager/script/: imtest~  input_manager  key_controller~  rviz_controller~
input_manager/src/keyboard/: generate_object.py~  interactiveMarker.py~  phantom.py~  phantom_interface.py~  wayPoint.py~
kinfu_DL/: CMakeLists.txt  CMakeLists.txt~  readme_YP
launchshell/: Baxter_ReadMe.txt  Link to Basic Baxter Control GUI.sh  Link to Run Motion Primitives GUI.sh  Link to Run vr_baxter GUI.sh  RunTeleopDemo.sh
pbdlib_manager/: CMakeLists.txt  CMakeLists.txt~  package.xml
phantom_interface/: CMakeLists.txt  package.xml  package.xml~  readme_YP  trajectory.txt
phantom_interface/launch/: omni.launch~  omni2.launch~  omni3.launch~  phantom.launch  phantom.launch~  phantom_alienware.launch  phantom_wall_pc.launch
phantom_interface/src/: HapticClass.h~  HapticFeedbackTest.cpp  PhantomROS.h  PhantomROS.h~  PhantomROS_hd.h~  PhantomROS_omni.h~  PhantomROS_save.h~  cursor_visualizer.cpp  cursor_visualizer.cpp~  cursor_visulizer.cpp~  main.cpp  main.cpp~  main_hd.cpp~  main_save.cpp~  mesh_pub.cpp  mesh_pub.cpp~  mesh_pub_save.cpp~  omni_test.cpp~
phantom_interface/src/Misc/: omni.cpp  omni_sub.cpp
phantom_interface/src/save/20180218/: PhantomROS.h  main.cpp  mesh_pub.cpp
phantom_interface/src/save/20180312/: PhantomROS.h  main.cpp  mesh_pub.cpp
phantom_interface/trajectory/: trajectory_plot  trajectory_w_vf.txt  trajectory_wo_vf.txt
teleop/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  readme_YP
teleop/launch/: teleop.launch~  teleop_wo_kinfu .launch~  teleop_wo_kinfu.launch~  teleop_wo_kinfu_rviz.launch~  teleoperator.launch~
teleop/launch/Old/: teleop_wo_kinfu.launch  teleop_wo_kinfu_rviz.launch
teleop/launch/desktops/: demo_recon_dell_tower.launch  demo_recon_wall_pc.launch  demo_recon_wall_pc.launch~  demo_teleop_dell_tower.launch  demo_teleop_dell_tower.launch~  demo_teleop_only_wall_tower.launch  demo_teleop_only_wall_tower_no_kinfu.launch  demo_teleop_wall_pc.launch~  playing_pan_teleop_dell_tower.launch~  playing_pan_teleop_wall_pc.launch  playing_pan_teleop_wall_pc.launch~  sim_teleop_dell_tower.launch  sim_teleop_dell_tower.launch~  sim_teleop_wall_pc.launch
teleop/launch/laptops/: dell_precision.launch  demo_recon.launch  sim_teleop.launch  single_pc_simulation.launch
teleop/rviz/: demo_recon.rviz  demo_teleop.rviz  sim_teleop.rviz
vf_interface/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  readme_YP  setup.py  setup.py~
vf_interface/launch/: rviz_controller.launch  rviz_controller.launch~
vf_interface/rviz/: demo.rviz  demo2.rviz
vf_interface/script/: imtest2~  pytest~  rviz_controller.py~  rviz_controller_wo_oculus~  rviz_controller~  vf_interface  vf_interface~
vf_interface/script/Old/: rviz_controller  vf_interface (190507)  vf_interface (copy)
vf_interface/src/modules/: __init__.py~  baxter_controller.py~  command_interface.py  command_interface.py~  generate_object.py  generate_object.py~  phantom_interface.py~  phantom_visualizer.py~
vf_interface/src/modules/Old/: phantom_visualizer.py
vr_baxter/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
vr_baxter/GUI/: EuclideanExtraction.launch  LaunchRunClass.py  RunBaxterDemo RController.sh~  RunBaxterGUI.sh  StartMain.launch  gui_open_window.py  moveToNeutral.py
vr_baxter/calibrate/: joint_end_states_cal.txt
vr_baxter/launch/: StartVRDemo.launch
vr_baxter/msg/: FloatArray.msg
vr_baxter/src/: EuclideanExtraction.cpp  EuclideanExtraction.cpp~  EuclideanExtractionJuly29.cpp  EuclideanExtractionNew.cpp  EuclideanExtractionold.cpp  MarkerPub.cpp  Plot3D.py  STL_Vert.py  SaveEndPointPosition.py  Sawyer_ML_Control.py  UnityController.py  UnityControllerRight.py  UnityControllerRight.py~  VREP_Joints.py  update_joint.py
vr_baxter/src/legacy/: PointCloudProcess.py  ProcessPointCloud.cpp
vr_common/sawyer_interface_msgs/: CMakeLists.txt  package.xml
vr_common/sawyer_interface_msgs/srv/: CheckArrived.srv
vr_common/vr_interface_msgs/: CMakeLists.txt  package.xml
vr_common/vr_interface_msgs/Subscriber Scripts/: subPoseNameArray.py
vr_common/vr_interface_msgs/msg/: PoseNameArray.msg
(+350 files in other folders)
