<?xml version="1.0"?>
<package>
  <name>phantom_interface</name>
  <version>1.0.0</version>
  <description>The phantom interface package</description>

  <maintainer email="leed@anl.gov">Donghyeon Lee</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
	<build_depend>visualization_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>openhaptics-ae</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>sensor_msgs</build_depend> 
  <build_depend>cmake_modules</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
</package>
