<?xml version="1.0"?>
<package>
  <name>teleop</name>
  <version>1.0.0</version>
  <description>launch package for whole teleoperation system</description>

  <maintainer email="leed@anl.gov">Donghyeon Lee</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
</package>
